--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,20 @@ span {
 }
 
 body {
-  background: url(img/background.jpg) no-repeat fixed center;
+  background-color: rgba(3, 72, 85, 1);
   background-size: cover;
   margin-bottom: auto;
 }
 
 .fa-2x {
   font-size: 1.5em !important;
+}
+
+.Yolo_logo {
+  height: 200px;
+  width: 200px;
+  margin: 0 auto;
+  display: block;
 }
 
 .app {
@@ -53,6 +60,7 @@ body {
   position: relative;
   display: block;
   top: 0;
+
 }
 
 .side-two {
@@ -75,7 +83,7 @@ body {
   margin: 0 !important;
   height: 60px;
   width: 100%;
-  background-color: #eee;
+  background-color: #028090;
   z-index: 1000;
 }
 
@@ -104,7 +112,7 @@ body {
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: #000;
+  color: rgb(255, 255, 255);
   display: block;
 }
 
@@ -112,7 +120,7 @@ body {
   display: none;
   padding: 0 5px;
   font-size: 12px;
-  color: #93918f;
+  color: #000000;
 }
 
 .heading-compose {
@@ -149,7 +157,7 @@ body {
   height: 100%;
   width: 100%;
   padding: 10px !important;
-  background-color: #fbfbfb;
+  background-color: #D3D0CB;
 }
 
 
@@ -166,16 +174,14 @@ body {
 .sideBar {
   padding: 0 !important;
   margin: 0 !important;
-  background-color: rgb(243, 243, 243);
+  background-color: #D3D0CB;
   overflow-y: auto;
-  border: 1px solid #f7f7f7;
   height: calc(100% - 120px);
 }
 
 .sideBar-body {
   position: relative;
   padding: 10px !important;
-  border-bottom: 1px solid #11143bfa;
   height: 72px;
   margin: 0 !important;
   cursor: pointer;
@@ -215,7 +221,7 @@ body {
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: #000;
+  color: #000000;
 }
 
 .sideBar-time {
@@ -245,7 +251,7 @@ body {
   margin: 0 !important;
   height: 100px;
   width: 100%;
-  background-color: #00bfa5;
+  background-color: #3a71c4;
   z-index: 1001;
 }
 
@@ -256,7 +262,7 @@ body {
   margin-top: 30px !important;
   width: 100%;
   z-index: 1001;
-  color: #fff;
+  color: rgb(62, 107, 143);
 }
 
 .newMessage-title {
@@ -288,7 +294,7 @@ body {
   height: 100%;
   width: 100%;
   padding: 10px !important;
-  background-color: #fbfbfb;
+  background-color: #002575;
 }
 
 .composeBox-inner input:focus {
@@ -300,9 +306,8 @@ body {
 .compose-sideBar {
   padding: 0 !important;
   margin: 0 !important;
-  background-color: #fff;
+  background-color: rgba(108, 186, 218, 0.603);
   overflow-y: auto;
-  border: 1px solid #f7f7f7;
   height: calc(100% - 160px);
 }
 
@@ -313,17 +318,16 @@ body {
   margin: 0 !important;
   height: 100%;
   /*width: 100%;*/
-  border-left: 1px solid rgba(0, 0, 0, .08);
+
   /*overflow-y: auto;*/
 }
 
 .message {
   padding: 0 !important;
   margin: 0 !important;
-  background: url("w.jpg") no-repeat fixed center;
+  background-color: #eeece3;
   background-size: cover;
   overflow-y: auto;
-  border: 1px solid #f7f7f7;
   height: calc(100% - 120px);
 }
 
@@ -382,11 +386,12 @@ body {
 
 }
 
+/*message receiver*/
 .receiver {
   width: auto !important;
   padding: 4px 10px 7px !important;
   border-radius: 10px 10px 10px 0;
-  background: #ffffff;
+  background: #8597d3;
   font-size: 12px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
   word-wrap: break-word;
@@ -396,7 +401,7 @@ body {
 .sender {
   float: right;
   width: auto !important;
-  background: #dcf8c6;
+  background: #f5f5f5;
   border-radius: 10px 10px 0 10px;
   padding: 4px 10px 7px !important;
   font-size: 12px;
@@ -406,12 +411,12 @@ body {
 }
 
 
-/*Reply*/
+/*Reply text area*/
 
 .reply {
   height: 60px;
   width: 100%;
-  background-color: #f5f1ee;
+  background-color: #028090;
   padding: 10px 5px 10px 5px !important;
   margin: 0 !important;
   z-index: 1000;
@@ -424,7 +429,7 @@ body {
 .reply-emojis i {
   text-align: center;
   padding: 5px 5px 5px 5px !important;
-  color: #93918f;
+  color: #ffffff;
   cursor: pointer;
 }
 
@@ -435,7 +440,7 @@ body {
 .reply-recording i {
   text-align: center;
   padding: 5px !important;
-  color: #93918f;
+  color: #fffdfb;
   cursor: pointer;
 }
 
@@ -446,7 +451,7 @@ body {
 .reply-send i {
   text-align: center;
   padding: 5px !important;
-  color: #93918f;
+  color: #ffffff;
   cursor: pointer;
 }
 
@@ -482,7 +487,7 @@ body {
 
   .heading {
     height: 70px;
-    background-color: #009688;
+    background-color: #F58F29;
   }
 
   .fa-2x {
@@ -563,6 +568,11 @@ body {
     padding: 4% !important;
     color: rgba(0, 0, 0, .4);
     vertical-align: baseline;
+  }
+
+  .img {
+    height: 200px;
+    width: 200px;
   }
 
   /*Conversation*/
